Bubble layout: Fix message action bar not showing with images

--- a/res/css/views/rooms/_BubbleLayout.scss
+++ b/res/css/views/rooms/_BubbleLayout.scss
@@ -338,6 +338,10 @@ $left-gutter: 54px;
         max-width: 100%;
     }
 
+    .sc_MImageBody_container {
+        position: relative;
+    }
+
     .mx_MImageBody {
         margin-right: 0;
         position: relative;
